// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`warning-image Bigger icon renders as expected 1`] = `
<svg
  className="color-orange"
  height={120}
  viewBox="0 0 60 60"
  width={120}
>
  <circle
    cx="30"
    cy="30"
    fill="#fbcea6"
    r="25"
  />
  <path
    d="M30,15.7c-1.3,0-2.7,0.7-3.3,1.8l-9.6,20.4c-1.1,1.8,0,4.4,2.4,4.4H30h10.4c2.4,0,3.6-2.7,2.4-4.4l-9.6-20.4 C32.7,16.3,31.3,15.7,30,15.7z M30,22.3c1.3,0,2.2,0.9,2.2,2.2V29c0,1.3-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2v-4.4 C27.8,23.2,28.7,22.3,30,22.3z M30,33.4c1.3,0,2.2,0.9,2.2,2.2s-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2S28.7,33.4,30,33.4z"
    fill="#ba7334"
  />
</svg>
`;

exports[`warning-image Bigger icon renders as expected 2`] = `
<svg
  className="color-red"
  height={120}
  viewBox="0 0 60 60"
  width={120}
>
  <circle
    cx="30"
    cy="30"
    fill="#ffb9a9"
    r="25"
  />
  <path
    d="M30,15.7c-1.3,0-2.7,0.7-3.3,1.8l-9.6,20.4c-1.1,1.8,0,4.4,2.4,4.4H30h10.4c2.4,0,3.6-2.7,2.4-4.4l-9.6-20.4 C32.7,16.3,31.3,15.7,30,15.7z M30,22.3c1.3,0,2.2,0.9,2.2,2.2V29c0,1.3-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2v-4.4 C27.8,23.2,28.7,22.3,30,22.3z M30,33.4c1.3,0,2.2,0.9,2.2,2.2s-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2S28.7,33.4,30,33.4z"
    fill="#d85a3d"
  />
</svg>
`;

exports[`warning-image Error renders as expected 1`] = `
<svg
  className="color-red"
  height={60}
  viewBox="0 0 60 60"
  width={60}
>
  <circle
    cx="30"
    cy="30"
    fill="#ffb9a9"
    r="25"
  />
  <path
    d="M30,15.7c-1.3,0-2.7,0.7-3.3,1.8l-9.6,20.4c-1.1,1.8,0,4.4,2.4,4.4H30h10.4c2.4,0,3.6-2.7,2.4-4.4l-9.6-20.4 C32.7,16.3,31.3,15.7,30,15.7z M30,22.3c1.3,0,2.2,0.9,2.2,2.2V29c0,1.3-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2v-4.4 C27.8,23.2,28.7,22.3,30,22.3z M30,33.4c1.3,0,2.2,0.9,2.2,2.2s-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2S28.7,33.4,30,33.4z"
    fill="#d85a3d"
  />
</svg>
`;

exports[`warning-image Warning renders as expected 1`] = `
<svg
  className="color-orange"
  height={60}
  viewBox="0 0 60 60"
  width={60}
>
  <circle
    cx="30"
    cy="30"
    fill="#fbcea6"
    r="25"
  />
  <path
    d="M30,15.7c-1.3,0-2.7,0.7-3.3,1.8l-9.6,20.4c-1.1,1.8,0,4.4,2.4,4.4H30h10.4c2.4,0,3.6-2.7,2.4-4.4l-9.6-20.4 C32.7,16.3,31.3,15.7,30,15.7z M30,22.3c1.3,0,2.2,0.9,2.2,2.2V29c0,1.3-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2v-4.4 C27.8,23.2,28.7,22.3,30,22.3z M30,33.4c1.3,0,2.2,0.9,2.2,2.2s-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2S28.7,33.4,30,33.4z"
    fill="#ba7334"
  />
</svg>
`;
